# ocssw

./: .gitlab-ci.yml  .manifest_tag  CMakeLists.txt  README.md  manifest.json
include/ViirsGeo/: VcstGeoParameters.h
include/focs/: DataProvider.hpp  FileReader.hpp  FileWriter.hpp  KvStore.hpp  LeapSecondDatabase.hpp  Log.hpp  Module.hpp  ModuleManager.hpp  Product.hpp  ShareTree.hpp  Variable.hpp
oel_hdf4/filetype/: filetype.c  filetype.h
oel_hdf4/libbin/: ncdfbin_utils.c
oel_hdf4/libdfutils/: wrapper.c
oel_hdf4/libl1/: CMakeLists.txt  alloc_l1.c  cloud_flag.c  filehandle.h  filehandle_init.c  l1.h  l1_goci.c  l1_hawkeye.c  l1_hico.c  l1_input.h  l1_io.c  l1_l5tm.c  l1_l7etm.c  l1_meris_N1.c  l1_modis.c  l1_modis.h  l1_msi.cpp  l1_oci.c  l1_oci.h  l1_oli.c  l1_options.c  l1_seawifs.c  l1_seawifs.h  l1_viirs_h5.c  l1_viirs_l1b.c  l1_viirs_l1b.h  l1c_latlongrid.cpp  l1c_latlongrid.h  scene_meta.c  setflags_l1.c  uncertainty.c
oel_hdf4/libseawifs/: getcal_proto.h  l1a_proto.h  st_proto.h
oel_util/libgenutils/: CMakeLists.txt  allocate2d.c  allocate2d.h  allocate2d.pl  clo.c  clo.h  genutils.h  resolution_utils.cpp
oel_util/libnetcdfutils/: CMakeLists.txt  createNCDF.c  global_attrs.cpp  global_attrs.h  nc4utils.h  nc_gridutils.c  nc_gridutils.h  nc_init_compress.c
oel_util/libpiutils/: productInfo.cpp  productInfo.h  sensorDefs.h  sensorInfo.c  sensorInfo.h
oel_util/libtimeutils/: CMakeLists.txt  jdate.c  jday.c  timeutils.h  unix2isodate.c
src/: CMakeLists.txt
src/ancgen/: ancgen.cpp
src/dtdb/: CMakeLists.txt  DDAlgorithm.cpp  DDAlgorithm.h  DDAncillary.cpp  DDAncillary.h  DDOptions.cpp  DDOptions.h  DDProcess.cpp  DDProcess.h  DDSensor.cpp  DDSensor.h  DDataset.hpp  README  dtdb.cpp  dtdb.par  dtdb_home.par  dtdb_lite.par
src/dtdb/cython/: dbocean.c  dbocean.html  dbocean.pyx  dtdb.py  dtocean.c  dtocean.html  dtocean.pyx  setup.py
src/dtdb/darktarget/: DtAlgLand.cpp  DtAlgOcean.cpp  DtAlgorithm.cpp  DtAlgorithm.h  DtLutNetcdf.cpp  DtLutNetcdf.h  DtMask.cpp  DtMask.h  generate_dt_luts.cpp
src/dtdb/deepblue/: DbAlgLand.cpp  DbAlgOcean.cpp  DbAlgorithm.cpp  DbAlgorithm.h  DbLutNetcdf.cpp  DbLutNetcdf.h  DbMask.cpp  DbMask.h  DbMaskOCI.cpp  DbMaskOCI.h  calendars.f95  db_sav.inc  deepblue_config.f95  deepblue_initialize.f90  find_v_vegset_nc4.f  find_v_viirs_nc4.f  generate_db_luts.cpp  get_lut_211sfc_nc4.f90  get_lut_igbp_land_cover_nc4.f90  landcover_nc4.f95  modis_surface_nc4.f95  viirs_aerosol_luts_nc4.f95  viirs_ancillary.f95  viirs_ler_luts.f95  viirs_ler_luts_nc4.f95
src/dtdb/l1b/: CldMask.cpp  CldMask.h  L1BAlgorithm.cpp  L1BAlgorithm.h
src/dtdb/python/: bhmie.py  color_dtdb.py  copy_sim_met.py  dbocean.py  dtdb.py  dtdb_oci_sim.py  dtdb_viirs_l1a.py  dtland.py  dtocean.py  histograms.py  histograms_c.py  histograms_d.py  histograms_r.py  histograms_sa.py  mie_kern.py  mkern_oci.py  mkern_viirs.py  rfft_oci.py  viirs_files.py
src/dtdb/resam_viirs/: RsViirs.cpp  RsViirs.h  RsViirs.hpp  resam_viirs.cpp
src/geogen_modis/: GEO_read_L1Ascan_metadata.c
src/get_dataday/: CMakeLists.txt  get_dataday.cpp  version.h
src/gmao/: gmao_aot_subset  gmao_cf_subset  gmao_met_merge  gmao_profile_subset  gmao_rad_subset
src/l1agen_hawkeye/: hawkeyeUtil.cpp  hawkeyeUtil.h  l0gen_hawkeye.cpp  l1agen_hawkeye.cpp  outernetDecode.c
src/l1agen_oci/: CMakeLists.txt  common.cpp  common.h  l0info_oci.cpp  l0info_oci.h  l1agen_oci.cpp  l1agen_oci.h
src/l1agen_seawifs/: CMakeLists.txt  main_l1agen.c  swl0_utils.c  swl0_utils.h
src/l1bgen_oci/: CMakeLists.txt  common.cpp  common.h  geolocate_oci.cpp  geolocate_oci.h  l1bgen_oci.cpp  l1bgen_oci.h
src/l1cgen/: CMakeLists.txt  Matrix.h  README.txt  Strassen.h  hawkeye_methods.cpp  hawkeye_methods.h  l1c.cpp  l1c.h  l1c_bin.cpp  l1c_bin.h  l1c_filehandle.cpp  l1c_filehandle.h  l1c_input.cpp  l1c_input.h  l1c_str.cpp  l1c_str.h  l1cgen.cpp  l1cgen.h  l1cgen_input.cpp  l2_str.cpp  l2_str.h  l2prod.h  ncfileinfo.cpp
src/l2bin/: CMakeLists.txt  cdata.h  dataday.c  dataday.h  l2bin.cpp  l2bin_input.cpp  l2bin_input.h  ncfileinfo.cpp  ncfileinfo.h
src/l2brsgen/: l2brsgen.h  main_l2brsgen.c  put_l2brs.c
src/l2extract/: CMakeLists.txt  l2extract.h  l2extract_input.c  l2extract_netcdf.c  main_l2extract.c
src/l2gen/: CMakeLists.txt  HOWTO_Add_a_product.txt  acq_sfc_albedo.c  aerosol.c  alloc_l2.c  anc_acq.c  anc_acq.h  aph.c  atmocor1.c  atmocor1_land.c  atmocor2.c  calc_par.c  convert_band.c  convl12.c  cpl1rec.c  filter.c  fluorescence.c  gas_trans.c  get_Cphyt.c  get_Kd.c  get_avw.c  get_cmp.c  get_dem_height.c  get_height.c  get_l2prod_index.c  get_ndvi.c  (+37 more)
src/l3bin/: CMakeLists.txt  l3bin.cpp  l3bin_input.c  l3bin_input.h  l3binmerge.cpp
src/libl2/: CMakeLists.txt  Changelog.md  expand3D.cpp  expand3D.hpp  readL2scan.c  readL2scan.h  setupflags.c  setupflags.h
src/scripts/: CMakeLists.txt  hktgen_pace.py  l0info_harp.py  l0info_hkt.py  l0info_oci.py  l0info_pace.py  l0info_utils.py  l1bextract_safe_nc.py  l1cextract.py  mapgen.py  multilevel_processor.py  obpg_file_type.py
src/scripts/mlp/: get_obpg_file_type.py  get_output_name_utils.py  uber_par_file_reader.py
src/scripts/modis/: modis_L1A_utils.py  modis_L1B_utils.py  modis_utils.py
src/scripts/pex/: CMakeLists.txt  README.md  odps_requirements.txt
src/scripts/pex/hktgen_pace/: CMakeLists.txt
src/scripts/pex/l0info_pace/: CMakeLists.txt
src/scripts/seadasutils/: ProcUtils.py  anc_utils.py  missionID.json  setupenv.py
src/scripts/tlm/: PacketUtils.py
src/scripts/tlm/pace/: APID108.py  APID128.py  APID198.py
src/scripts/tlm/pace/docs/: PACE_HKT_Data_Structure.cdl  bus_dleon_ac.rec  bus_dleon_om.rec  bus_mech_tsade_tlm.rec
src/tmatrix/: CMakeLists.txt  TmConstants.h  TmParamsReader.cpp  TmParamsReader.h  TmProcess.cpp  TmProcess.h  tm_ampld.lp.f  tm_ampld.par.f  tm_tmd.lp.f  tm_tmd.par.f  tmatrix.cpp  tmatrix.h  tmatrix.par  tmatrix_input.cpp  tmq.lp.f
src/tmatrix/python/: tmatrix.py
src/tmatrix/python/fortran_tm/: pytmatrixf.pyf  pytmatrixf.pyf.save  tmd.lp.f  tmd.par.f
src/tmatrix/python/test/: fort.10  test  test_tmatrix.py
(+70 files in other folders)
