cmake_minimum_required(VERSION 3.12)

install(DIRECTORY seadasutils modis viirs mlp DESTINATION bin PATTERN "__pycache__" EXCLUDE)
install(PROGRAMS mapgen.py DESTINATION bin RENAME mapgen)
install(PROGRAMS mapgen_overlay.py DESTINATION bin RENAME mapgen_overlay)
install(PROGRAMS modis_atteph.py DESTINATION bin RENAME modis_atteph)
install(PROGRAMS modis_geocheck.py DESTINATION bin RENAME modis_geocheck)
install(PROGRAMS modis_GEO.py DESTINATION bin RENAME modis_GEO)
install(PROGRAMS modis_L1A_extract.py DESTINATION bin RENAME modis_L1A_extract)
install(PROGRAMS modis_L1A.py DESTINATION bin RENAME modis_L1A)
install(PROGRAMS modis_L1B.py DESTINATION bin RENAME modis_L1B)
install(PROGRAMS getanc_aquarius.py DESTINATION bin RENAME getanc_aquarius)
install(PROGRAMS getanc.py DESTINATION bin RENAME getanc)
install(PROGRAMS viirs_l1_benchmark.py DESTINATION bin RENAME viirs_l1_benchmark)
install(PROGRAMS multilevel_processor.py DESTINATION bin RENAME multilevel_processor)
install(PROGRAMS obdaac_download.py DESTINATION bin RENAME obdaac_download)
install(PROGRAMS seadas_info.py DESTINATION bin RENAME seadas_info)
install(PROGRAMS l1bextract_safe_nc.py DESTINATION bin RENAME l1bextract_safe_nc)
install(PROGRAMS rewrite_seadas_config.py DESTINATION bin RENAME rewrite_seadas_config)
install(PROGRAMS update_luts.py DESTINATION bin RENAME update_luts)
install(PROGRAMS ncattredit.py DESTINATION bin)
install(PROGRAMS compare_hdf4.py DESTINATION bin RENAME compare_hdf4)
install(PROGRAMS compare_l3b.sh DESTINATION bin RENAME compare_l3b)
install(PROGRAMS test_exit_code.sh DESTINATION bin RENAME test_exit_code)  
install(PROGRAMS ocssw_bootstrap DESTINATION bin)
install(PROGRAMS ocssw_runner DESTINATION bin)
install(PROGRAMS next_level_name.py DESTINATION bin RENAME next_level_name)
install(PROGRAMS obpg_file_type.py DESTINATION bin RENAME obpg_file_type)
install(PROGRAMS get_output_name.py DESTINATION bin RENAME get_output_name)
install(FILES l0info_utils.py DESTINATION bin)
install(FILES l0info_harp.py DESTINATION bin)
install(FILES l0info_hkt.py DESTINATION bin)
install(FILES l0info_oci.py DESTINATION bin)
install(FILES l0info_spex.py DESTINATION bin)
install(PROGRAMS l0info_pace.py DESTINATION bin RENAME l0info_pace)

install(DIRECTORY tlm DESTINATION bin PATTERN "__pycache__" EXCLUDE PATTERN "docs" EXCLUDE)
install(PROGRAMS hktgen_pace.py DESTINATION bin RENAME hktgen_pace)
install(PROGRAMS l1cextract.py DESTINATION bin RENAME l1cextract)
